--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/rovak73/keenclone#readme",
   "dependencies": {
     "postcss-import": "^12.0.1",
+    "star-rating.js": "^3.2.0",
+    "sticky-sidebar": "^3.3.1",
     "tailwindcss": "^1.6.2"
   }
 }
