--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/rovak73/keenclone#readme",
   "dependencies": {
+    "cropperjs": "^1.5.7",
     "postcss-import": "^12.0.1",
     "star-rating.js": "^3.2.0",
     "sticky-sidebar": "^3.3.1",
